All notable changes to this project will be documented in this file. For a
complete changelog, see https://github.com/jollejolles/pirecorder/commits/

Updates not yet in latest release:
    * Fixed extracting roi (zoom) in calibrate function 
    * Fixed drawing crosshair for calibrate function
    * Improved convert function with continuous file checking

2019-11-18 - version 2.0.0
    Major update with large number of small and large improvements and fixes and
    the module is now available on PyPi. The most major changes are listed.

    * Renamed animrec to pirecorder
    * Fixed number of issues to do with camera shutter speed
    * Improved schedule function to be fully usable from the command line
    * Improved calibrate function to work on non-rasbian systems as well
    * All major functionalities from pirecorder can now be run from the command
      line, thereby limiting the knowledge of python required to use pirecorder
    * Included new convert functionality for image and video conversion

2019-06-19 - version 1.7.0
    * Moved getgains function to its own file and updated integrated function
    * Moved scheduling functionality to its own class in a separate file
    * Fixed stream class parameters
    * Fixed issue with clearing all jobs with scheduler
    * Created a test branch
    * Changed the package name and short description
    * Fixed zoom error when using custom vidsize
    * Fixed set_roi function to work with videoin class
    * Fixed set_gains function to update based on custom gains
    * Included console script in setup file for running from terminal

2019-06-19 - version 1.6.0
    * Added time delay to get right video resolution for VideoIn class
    * Temporary image for rpi zooming is now automatically deleted
    * Considerably fixed and improved calibrate function throughout
    * Integrated functionality that detects if system is rpi or not
    * Integrated rpi picamera resolution conversion to fit in (32,16) conversion