@@ -33,6 +33,7 @@ from time import sleep, strftime
 from localconfig import LocalConfig
 from pythutils.sysutils import Logger, lineprint, homedir, checkfrac
 from pythutils.fileutils import name
+from pythutils.mediautils import picamconv
 
 from .schedule import Schedule
 from .getgains import getgains
@@ -217,9 +218,9 @@ class PiRecorder:
 
     def _setup_cam(self):
 
-        """Sets-up the raspberry pi camera based on configuration"""
+        """Sets up the raspberry pi camera based on configuration"""
 
-        # Load picamera module here so pirecorder is installable on non-rpi OS
+        #load picamera module in-function so pirecorder is installable on all OS
         import picamera
         import picamera.array
 
@@ -234,6 +235,15 @@ class PiRecorder:
             self.cam.resolution = literal_eval(self.config.vid.viddims)
             self.cam.framerate = self.config.vid.vidfps
         self.rawCapture = picamera.array.PiRGBArray(self.cam, size = self.cam.resolution)
+
+        if self.config.cus.roi is None:
+            self.cam.zoom = (0,0,1,1)
+            self.resize = self.cam.resolution
+        else:
+            self.cam.zoom = self.config.cus.roi
+            w = int(self.cam.resolution[0]*self.config.cus.roi[2])
+            h = int(self.cam.resolution[1]*self.config.cus.roi[3])
+            self.resize = picamconv(w,h)
 
         self.longexpo = False if self.cam.framerate >= 6 else True
         if self.longexpo:
@@ -433,14 +443,16 @@ class PiRecorder:
         if self.config.rec.rectype == "img":
 
             self.filename = self.filename + strftime("%H%M%S") + self.filetype
-            self.cam.capture(self.filename, format="jpeg", quality = self.config.img.imgquality)
+            self.cam.capture(self.filename, format="jpeg", resize = self.resize,
+                             quality = self.config.img.imgquality)
             lineprint("Captured "+self.filename)
 
         elif self.config.rec.rectype == "imgseq":
 
             timepoint = datetime.now()
             for i, img in enumerate(self.cam.capture_continuous(self.filename,
-                                    format="jpeg", quality = self.config.img.imgquality)):
+                                    format="jpeg", resize = self.resize,
+                                    quality = self.config.img.imgquality)):
                 if i < self.config.img.imgnr-1:
                     timepassed = (datetime.now() - timepoint).total_seconds()
                     delay = max(0, self.config.img.imgwait - timepassed)
@@ -460,8 +472,9 @@ class PiRecorder:
 
             for session in ["_S%02d" % i for i in range(1,999)]:
                 session = "" if self.config.rec.rectype == "vid" else session
-                filename = self.filename+strftime("%H%M%S" )+session+self.filetype
-                self.cam.start_recording(filename, quality = self.config.vid.vidquality)
+                filename = self.filename+strftime("%H%M%S")+session+self.filetype
+                self.cam.start_recording(filename, resize = self.resize,
+                                         quality = self.config.vid.vidquality)
                 lineprint("Start recording "+filename)
                 self.cam.wait_recording(self.config.vid.vidduration + self.config.vid.viddelay)
                 self.cam.stop_recording()
