@@ -2,7 +2,8 @@ All notable changes to this project will be documented in this file. For a
 complete changelog, see https://github.com/jollejolles/pirecorder/commits/
 
 Updates not yet in latest release:
-    * Fixed extracting roi (zoom) in calibrate function 
+    * Integrated zoom functionality for recording
+    * Fixed extracting roi (zoom) in calibrate function
     * Fixed drawing crosshair for calibrate function
     * Improved convert function with continuous file checking
 
